# lrglm

./: .gitignore  README.md  pyproject.toml  setup.py
src/lrglm/: __init__.py  data.py  model.py  model_kan.py  model_old.py  plot.py
