[build-system]
requires = ["flit_core >=3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "lrglm"
module = "lrglm"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/janclemenslab/lrglm"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
requires = ['torch', 'torchaudio', 'torchvision', 'torchinfo', 'lightning', 'matplotlib', 'scikit-learn', 'ipykernel', 'rich', 'ipywidgets', 'pandas', 'imbalanced-learn', 'flammkuchen @git+https://github.com/portugueslab/flammkuchen.git', 'glm_utils']
description-file = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]

[tool.ruff]
line-length = 128